--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                     <p>Hello, my name is</p>
                     <h1>Basma <span>Naser</span></h1>
                     <p>I'am a Front End Developer</p>
-                    <div class="em_group" target="_blank">
-                        <input type="email" placeholder="Enter your Email " class="email">
-                        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><input type="submit"
-                                value="let's Start" class="sub" autocapitalize=""></a>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -227,7 +223,8 @@
                         class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/basma_naser16/" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
-
+                <a href="mailto:bosynaser599@gmail.com" target="_blank" ><i 
+                class="fa-solid fa-envelope"></i></a>
             </div>
         </div>
     </section>
