--- a/index.html
+++ b/index.html
@@ -166,18 +166,21 @@
                     <div Style="width:500px">
                         <h3 class="h3" style="font-size:30px">Front End </h3>
                         <p style="letter-spacing:1.5px; width:auto; text-transform:capitalize; color:aliceblue">a responsive Website Using <span style="color:rgb(226, 221, 221);">HTML and CSS And Javascript and using Bootstrap FrameWork And Angular</span></p>
+                    <h4>Price: $300 - $500</h4>
                     </div>
                     <div Style="width:500px">
                         <h3 class="h3" style="font-size:30px">Back End </h3>
                         <p style="letter-spacing:1.5px; width:auto; text-transform:capitalize; color:aliceblue">Build A backend Side for the website by using <span
                                 style="color:rgb(226, 221, 221);"> C# and Sql server And ASP.NET and MVC and entity Framework 
                                 </span></p>
+                                <h4>Price: $400 - $600</h4>
                     </div>
                     <div Style="width:500px">
                         <h3 class="h3" style="font-size:30px">UI Design </h3>
                         <p style="letter-spacing:1.5px; width:auto; text-transform:capitalize;color:aliceblue">Build A WebSite and Mobile designs UI (User Interface) by using programme
                             <span style="color:rgb(226, 221, 221);"> Adobe Xd and Adobe illustrator 
                             </span></p>
+                            <h4>Price: $200 - $400</h4>
                     </div>
                 </div>
             </div>
